--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,10 @@
 
-.raleway-text{
+.raleway-font{
   font-family: "Raleway", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
 }
-.inter-text {
+.inter-font {
   font-family: "Inter", sans-serif;
   font-optical-sizing: auto;
   font-style: normal;
@@ -15,6 +15,7 @@
 
 }
 body{
+    background-color: #f8f6f5;
 
 }
 .header-container {
@@ -92,11 +93,99 @@ body{
     font-size: 24px;
     opacity: 50%;
 }
-.show-discounted-products-button {
-
-}
 .discount-section-container img {
     width: 403px;
     height: 328px;
 }
+.order-user-info-container {
+    display: flex;
+    background-color: rgba(250, 209, 113, 0.312);
+    border-radius: 24px;
+    height: 306px;
+    width: 1140px;
+    margin:auto;
+    align-items: center;
+}
+.order-user-info-contents {
+    width: 1140px;  
+}
+.order-user-info-contents h1 {
+    text-align: center;
+    font-size: 38px;
+    font-weight: bold;
+    margin-top: 0px;
+}
+.order-user-info {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    text-align: center;
+}
+.order-user-info p {
+    font-size: 80px;
+    margin: 0px 0px;
+}
+.order-user-info span {
+    font-size: 20px;
+    opacity: 50%;
+}
+.user-review-container {
+ 
+    display: flex;
+    width:1140px;
+    height:342px;
+    margin: auto;
+    justify-content: center;
+    margin-top: 130px;
+}
+.user-review-contents h1 {
+   text-align: center;
+}
+.user-review-cards {
+    display: flex;
+    width:1140px;
+    justify-content: space-around;
+}
+.user-review-single-card
+{
+    width: 366.67px;
+    height: 243px;
+    background-color: white;
+    border-radius: 14px;
+    
+}
+.review-star
+{
+    color:#FFB805;
+    margin-top: 50px;
 
+}
+.user-review-single-card h3 {
+    margin-left: 50px;
+}
+.user-review-single-card p {
+    margin-left: 50px;
+}
+.career-section-container {
+    background-color: white;
+    border-radius: 14px;
+    width: 1140px;
+    height: 696.77px;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.career-section-contents {
+    
+      text-align: center;
+}
+.career-section-contents h1{
+      font-size:50px;
+}
+.career-section-contents img{
+    width:840px;
+    height:400px;
+    margin-top: 10px;
+    border-radius: 48px;
+}
