--- a/styles/style.css
+++ b/styles/style.css
@@ -105,6 +105,7 @@ body{
     width: 1140px;
     margin:auto;
     align-items: center;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.1);;
 }
 .order-user-info-contents {
     width: 1140px;  
@@ -152,7 +153,7 @@ body{
     height: 243px;
     background-color: white;
     border-radius: 14px;
-    box-shadow: 0 10px 4px rgba(0, 0, 0, 0.1);;
+    box-shadow: 0 10px 4px rgba(0, 0, 0, 0.1);
     
 }
 .review-star
@@ -230,4 +231,39 @@ body{
 #message-input {
     height: 135px;
 
+
+}
+.footer-container {
+    width: 100%;
+    height: 428px;
+    margin:auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.footer-contents {
+    text-align: center;
+}
+.footer-contents h3 {
+    font-size: 100px;
+    margin-bottom: 0px;
+   
+}
+.footer-contents h3 span{
+    font-size: 50px;
+   
+}
+
+.footer-contents p {
+    margin-top:0px;
+    opacity: 50%;
+}
+.footer-contents nav ul {
+
+    list-style-type: none;
+    padding: 10px;
+}
+.footer-contents nav ul li {
+    display: inline;
+    margin-right: 20px;
 }
