--- a/styles/style.css
+++ b/styles/style.css
@@ -51,6 +51,7 @@ body{
     color: gray;
     font-size: 20px;
 }
+
 .primary-button {
     
     font-size: 16;
@@ -247,6 +248,10 @@ body{
 .footer-contents h3 {
     font-size: 100px;
     margin-bottom: 0px;
+   
+}
+.footer-contents h3 i {
+    font-size: 100px;
    
 }
 .footer-contents h3 span{
